middle-end: check that the lhs of a COND_EXPR is an SSA_NAME in cond_store recognition [PR116628]

Because the vect_recog_bool_pattern can at the moment still transition
out of GIMPLE and back into GENERIC the vect_recog_cond_store_pattern can
end up using an expression as a mask rather than an SSA_NAME.

This adds an explicit check that we have a mask and not an expression.

gcc/ChangeLog:

	PR tree-optimization/116628
	* tree-vect-patterns.cc (vect_recog_cond_store_pattern): Add SSA_NAME
	check on expression.

gcc/testsuite/ChangeLog:

	PR tree-optimization/116628
	* gcc.dg/vect/pr116628.c: New test.